@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,27 +19,26 @@
  */
 package org.sonar.db.qualityprofile;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Collections;
 import java.util.Map;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.data.MapEntry.entry;
 
-public class QProfileChangeDtoTest {
+class QProfileChangeDtoTest {
 
-  private QProfileChangeDto underTest = new QProfileChangeDto();
+  private final QProfileChangeDto underTest = new QProfileChangeDto();
 
   @Test
-  public void convert_data_to_map() {
+  void convert_data_to_map() {
     underTest.setData((Map) null);
     assertThat(underTest.getDataAsMap()).isEmpty();
 
     underTest.setData(Collections.emptyMap());
     assertThat(underTest.getDataAsMap()).isEmpty();
 
-    underTest.setData(ImmutableMap.of("k1", "v1", "k2", "v2"));
+    underTest.setData(Map.of("k1", "v1", "k2", "v2"));
     assertThat(underTest.getDataAsMap()).containsOnly(entry("k1", "v1"), entry("k2", "v2"));
   }
 }
