@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -26,11 +26,10 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import org.apache.commons.io.FileUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.sonar.api.Startable;
-import org.sonar.api.utils.log.Logger;
-import org.sonar.api.utils.log.Loggers;
 import org.sonar.core.platform.PluginInfo;
-import org.sonar.core.util.stream.MoreCollectors;
 import org.sonar.server.platform.ServerFileSystem;
 
 import static java.lang.String.format;
@@ -39,7 +38,7 @@ import static org.apache.commons.io.FileUtils.moveFileToDirectory;
 import static org.sonar.core.plugin.PluginType.EXTERNAL;
 
 public class PluginUninstaller implements Startable {
-  private static final Logger LOG = Loggers.get(PluginUninstaller.class);
+  private static final Logger LOG = LoggerFactory.getLogger(PluginUninstaller.class);
   private static final String PLUGIN_EXTENSION = "jar";
 
   private final ServerFileSystem fs;
@@ -99,7 +98,7 @@ public class PluginUninstaller implements Startable {
   public Collection<PluginInfo> getUninstalledPlugins() {
     return listJarFiles(fs.getUninstalledPluginsDir()).stream()
       .map(PluginInfo::create)
-      .collect(MoreCollectors.toList());
+      .toList();
   }
 
   private static Collection<File> listJarFiles(File dir) {
