@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,19 +19,16 @@
  */
 package org.sonar.server.issue;
 
-import java.util.Collections;
 import java.util.List;
 import org.sonar.core.issue.DefaultIssue;
 import org.sonar.core.issue.IssueChangeContext;
-import org.sonar.core.util.stream.MoreCollectors;
 import org.sonar.server.issue.workflow.IssueWorkflow;
 import org.sonar.server.issue.workflow.Transition;
 import org.sonar.server.user.UserSession;
 
-import static com.google.common.base.Preconditions.checkArgument;
 import static java.util.Objects.requireNonNull;
-import static org.apache.commons.lang.StringUtils.isBlank;
-import static org.apache.commons.lang.StringUtils.isNotBlank;
+import static org.apache.commons.lang3.StringUtils.isBlank;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
 /**
  * This service is a kind of overlay of {@link IssueWorkflow} that also deals with permission checking
@@ -47,19 +44,15 @@ public class TransitionService {
   }
 
   public List<Transition> listTransitions(DefaultIssue issue) {
-    if (issue.isFromExternalRuleEngine()){
-      return Collections.emptyList();
-    }
     String projectUuid = requireNonNull(issue.projectUuid());
     return workflow.outTransitions(issue)
       .stream()
       .filter(transition -> (userSession.isLoggedIn() && isBlank(transition.requiredProjectPermission()))
         || userSession.hasComponentUuidPermission(transition.requiredProjectPermission(), projectUuid))
-      .collect(MoreCollectors.toList());
+      .toList();
   }
 
   public boolean doTransition(DefaultIssue defaultIssue, IssueChangeContext issueChangeContext, String transitionKey) {
-    checkArgument(!defaultIssue.isFromExternalRuleEngine(), "Transition is not allowed on issues imported from external rule engines");
     return workflow.doManualTransition(defaultIssue, transitionKey, issueChangeContext);
   }
 
