@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -25,10 +25,10 @@ import com.google.common.collect.Table;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import org.sonar.core.util.stream.MoreCollectors;
+import java.util.stream.Collectors;
 import org.sonar.db.component.ComponentDto;
 import org.sonar.db.component.SnapshotDto;
-import org.sonar.db.measure.MeasureDto;
+import org.sonar.db.measure.ProjectMeasureDto;
 import org.sonar.db.metric.MetricDto;
 import org.sonarqube.ws.Common;
 
@@ -43,9 +43,10 @@ public class SearchHistoryResult {
   private final int pageSize;
   private List<SnapshotDto> analyses;
   private List<MetricDto> metrics;
-  private List<MeasureDto> measures;
+  private List<ProjectMeasureDto> measures;
   private Common.Paging paging;
   private ComponentDto component;
+  private List<String> requestedMetrics;
 
   public SearchHistoryResult(int page, int pageSize) {
     this.page = page;
@@ -68,7 +69,7 @@ public class SearchHistoryResult {
 
   public SearchHistoryResult setAnalyses(List<SnapshotDto> analyses) {
     this.paging = Common.Paging.newBuilder().setPageIndex(page).setPageSize(pageSize).setTotal(analyses.size()).build();
-    this.analyses = analyses.stream().skip(offset(page, pageSize)).limit(pageSize).collect(MoreCollectors.toList());
+    this.analyses = analyses.stream().skip(offset(page, pageSize)).limit(pageSize).toList();
 
     return this;
   }
@@ -82,16 +83,16 @@ public class SearchHistoryResult {
     return this;
   }
 
-  public List<MeasureDto> getMeasures() {
+  public List<ProjectMeasureDto> getMeasures() {
     return requireNonNull(measures);
   }
 
-  public SearchHistoryResult setMeasures(List<MeasureDto> measures) {
-    Set<String> analysisUuids = analyses.stream().map(SnapshotDto::getUuid).collect(MoreCollectors.toHashSet());
-    ImmutableList.Builder<MeasureDto> measuresBuilder = ImmutableList.builder();
-    List<MeasureDto> filteredMeasures = measures.stream()
+  public SearchHistoryResult setMeasures(List<ProjectMeasureDto> measures) {
+    Set<String> analysisUuids = analyses.stream().map(SnapshotDto::getUuid).collect(Collectors.toSet());
+    ImmutableList.Builder<ProjectMeasureDto> measuresBuilder = ImmutableList.builder();
+    List<ProjectMeasureDto> filteredMeasures = measures.stream()
       .filter(measure -> analysisUuids.contains(measure.getAnalysisUuid()))
-      .collect(MoreCollectors.toArrayList());
+      .toList();
     measuresBuilder.addAll(filteredMeasures);
     measuresBuilder.addAll(computeBestValues(filteredMeasures));
 
@@ -107,7 +108,7 @@ public class SearchHistoryResult {
    * <li>metric is optimized for best value</li>
    * </ul>
    */
-  private List<MeasureDto> computeBestValues(List<MeasureDto> measures) {
+  private List<ProjectMeasureDto> computeBestValues(List<ProjectMeasureDto> measures) {
     if (!isEligibleForBestValue().test(component)) {
       return emptyList();
     }
@@ -115,9 +116,9 @@ public class SearchHistoryResult {
     requireNonNull(metrics);
     requireNonNull(analyses);
 
-    Table<String, String, MeasureDto> measuresByMetricUuidAndAnalysisUuid = HashBasedTable.create(metrics.size(), analyses.size());
+    Table<String, String, ProjectMeasureDto> measuresByMetricUuidAndAnalysisUuid = HashBasedTable.create(metrics.size(), analyses.size());
     measures.forEach(measure -> measuresByMetricUuidAndAnalysisUuid.put(measure.getMetricUuid(), measure.getAnalysisUuid(), measure));
-    List<MeasureDto> bestValues = new ArrayList<>();
+    List<ProjectMeasureDto> bestValues = new ArrayList<>();
     metrics.stream()
       .filter(isOptimizedForBestValue())
       .forEach(metric -> analyses.stream()
@@ -128,8 +129,8 @@ public class SearchHistoryResult {
     return bestValues;
   }
 
-  private static MeasureDto toBestValue(MetricDto metric, SnapshotDto analysis) {
-    return new MeasureDto()
+  private static ProjectMeasureDto toBestValue(MetricDto metric, SnapshotDto analysis) {
+    return new ProjectMeasureDto()
       .setMetricUuid(metric.getUuid())
       .setAnalysisUuid(analysis.getUuid())
       .setValue(metric.getBestValue());
@@ -137,5 +138,14 @@ public class SearchHistoryResult {
 
   Common.Paging getPaging() {
     return requireNonNull(paging);
+  }
+
+  public SearchHistoryResult setRequestedMetrics(List<String> requestedMetrics) {
+    this.requestedMetrics = requestedMetrics;
+    return this;
+  }
+
+  public List<String> getRequestedMetrics() {
+    return requestedMetrics;
   }
 }
