@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -24,6 +24,7 @@ import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.sonar.api.server.ws.Request;
@@ -31,6 +32,7 @@ import org.sonar.api.server.ws.Response;
 import org.sonar.api.server.ws.WebService;
 import org.sonar.api.utils.DateUtils;
 import org.sonar.api.web.UserRole;
+import org.sonar.core.documentation.DocumentationLinkGenerator;
 import org.sonar.db.DbClient;
 import org.sonar.db.DbSession;
 import org.sonar.db.component.BranchDto;
@@ -45,7 +47,7 @@ import org.sonar.server.user.UserSession;
 import org.sonarqube.ws.NewCodePeriods;
 import org.sonarqube.ws.NewCodePeriods.ListWSResponse;
 
-import static org.sonar.core.util.stream.MoreCollectors.toList;
+import static org.sonar.server.ws.WsUtils.createHtmlExternalLink;
 import static org.sonar.server.ws.WsUtils.writeProtobuf;
 import static org.sonarqube.ws.NewCodePeriods.ShowWSResponse.newBuilder;
 
@@ -56,18 +58,22 @@ public class ListAction implements NewCodePeriodsWsAction {
   private final UserSession userSession;
   private final ComponentFinder componentFinder;
   private final NewCodePeriodDao newCodePeriodDao;
+  private final String newCodeDefinitionDocumentationUrl;
 
-  public ListAction(DbClient dbClient, UserSession userSession, ComponentFinder componentFinder, NewCodePeriodDao newCodePeriodDao) {
+  public ListAction(DbClient dbClient, UserSession userSession, ComponentFinder componentFinder, NewCodePeriodDao newCodePeriodDao,
+    DocumentationLinkGenerator documentationLinkGenerator) {
     this.dbClient = dbClient;
     this.userSession = userSession;
     this.componentFinder = componentFinder;
     this.newCodePeriodDao = newCodePeriodDao;
+    this.newCodeDefinitionDocumentationUrl = documentationLinkGenerator.getDocumentationLink("/project-administration/clean-as-you-code-settings/defining-new-code/");
   }
 
   @Override
   public void define(WebService.NewController context) {
     WebService.NewAction action = context.createAction("list")
-      .setDescription("List the New Code Periods for all branches in a project.<br>" +
+      .setDescription("Lists the " + createHtmlExternalLink(newCodeDefinitionDocumentationUrl, "new code definition") +
+        " for all branches in a project.<br>" +
         "Requires the permission to browse the project")
       .setSince("8.0")
       .setResponseExample(getClass().getResource("list-example.json"))
@@ -84,19 +90,19 @@ public class ListAction implements NewCodePeriodsWsAction {
 
     try (DbSession dbSession = dbClient.openSession(false)) {
       ProjectDto project = componentFinder.getProjectByKey(dbSession, projectKey);
-      userSession.checkProjectPermission(UserRole.ADMIN, project);
+      userSession.checkEntityPermission(UserRole.USER, project);
       Collection<BranchDto> branches = dbClient.branchDao().selectByProject(dbSession, project).stream()
         .filter(b -> b.getBranchType() == BranchType.BRANCH)
         .sorted(Comparator.comparing(BranchDto::getKey))
-        .collect(toList());
+        .toList();
 
       List<NewCodePeriodDto> newCodePeriods = newCodePeriodDao.selectAllByProject(dbSession, project.getUuid());
 
-      Map<String, InheritedNewCodePeriod> newCodePeriodByBranchUuid = newCodePeriods
+      Map<String, NewCodePeriodDto> newCodePeriodByBranchUuid = newCodePeriods
         .stream()
-        .collect(Collectors.toMap(NewCodePeriodDto::getBranchUuid, dto -> new InheritedNewCodePeriod(dto, dto.getBranchUuid() == null)));
+        .collect(Collectors.toMap(NewCodePeriodDto::getBranchUuid, Function.identity()));
 
-      InheritedNewCodePeriod projectDefault = newCodePeriodByBranchUuid.getOrDefault(null, getGlobalOrDefault(dbSession));
+      NewCodePeriodDto projectDefault = newCodePeriodByBranchUuid.getOrDefault(null, getGlobalOrDefault(dbSession));
 
       Map<String, String> analysis = newCodePeriods.stream()
         .filter(newCodePeriodDto -> newCodePeriodDto.getType().equals(NewCodePeriodType.SPECIFIC_ANALYSIS))
@@ -108,44 +114,47 @@ public class ListAction implements NewCodePeriodsWsAction {
 
       ListWSResponse.Builder builder = ListWSResponse.newBuilder();
       for (BranchDto branch : branches) {
-        InheritedNewCodePeriod inherited = newCodePeriodByBranchUuid.getOrDefault(branch.getUuid(), projectDefault);
+        NewCodePeriodDto newCodePeriod = newCodePeriodByBranchUuid.getOrDefault(branch.getUuid(), projectDefault);
 
         String effectiveValue = null;
 
         //handles specific analysis only
-        Long analysisDate = analysisUuidDateMap.get(analysis.get(inherited.getUuid()));
+        Long analysisDate = analysisUuidDateMap.get(analysis.get(newCodePeriod.getUuid()));
         if (analysisDate != null) {
           effectiveValue = DateUtils.formatDateTime(analysisDate);
         }
 
         builder.addNewCodePeriods(
-          build(projectKey, branch.getKey(), inherited.getType(), inherited.getValue(), inherited.inherited, effectiveValue));
+          build(projectKey, branch.getKey(), newCodePeriod, effectiveValue));
       }
 
       writeProtobuf(builder.build(), request, response);
     }
   }
 
-  private InheritedNewCodePeriod getGlobalOrDefault(DbSession dbSession) {
-    return newCodePeriodDao.selectGlobal(dbSession)
-      .map(dto -> new InheritedNewCodePeriod(dto, true))
-      .orElse(new InheritedNewCodePeriod(NewCodePeriodDto.defaultInstance(), true));
+  private NewCodePeriodDto getGlobalOrDefault(DbSession dbSession) {
+    return newCodePeriodDao.selectGlobal(dbSession).orElse(NewCodePeriodDto.defaultInstance());
   }
 
-  private static NewCodePeriods.ShowWSResponse build(String projectKey, String branchKey, NewCodePeriodType newCodePeriodType,
-    @Nullable String value, boolean inherited, @Nullable String effectiveValue) {
+  private static NewCodePeriods.ShowWSResponse build(String projectKey, String branchKey, NewCodePeriodDto ncd, @Nullable String effectiveValue) {
+    boolean inherited = ncd.getBranchUuid() == null;
     NewCodePeriods.ShowWSResponse.Builder builder = newBuilder()
-      .setType(convertType(newCodePeriodType))
+      .setType(convertType(ncd.getType()))
       .setInherited(inherited)
       .setBranchKey(branchKey)
-      .setProjectKey(projectKey);
+      .setProjectKey(projectKey)
+      .setUpdatedAt(ncd.getUpdatedAt());
 
     if (effectiveValue != null) {
       builder.setEffectiveValue(effectiveValue);
     }
 
-    if (value != null) {
-      builder.setValue(value);
+    if (ncd.getValue() != null) {
+      builder.setValue(ncd.getValue());
+    }
+
+    if (!inherited && ncd.getPreviousNonCompliantValue() != null) {
+      builder.setPreviousNonCompliantValue(ncd.getPreviousNonCompliantValue());
     }
 
     return builder.build();
@@ -166,25 +175,4 @@ public class ListAction implements NewCodePeriodsWsAction {
     }
   }
 
-  private static class InheritedNewCodePeriod {
-    NewCodePeriodDto newCodePeriod;
-    boolean inherited;
-
-    InheritedNewCodePeriod(NewCodePeriodDto newCodePeriod, boolean inherited) {
-      this.newCodePeriod = newCodePeriod;
-      this.inherited = inherited;
-    }
-
-    NewCodePeriodType getType() {
-      return newCodePeriod.getType();
-    }
-
-    String getValue() {
-      return newCodePeriod.getValue();
-    }
-
-    String getUuid() {
-      return newCodePeriod.getUuid();
-    }
-  }
 }
