@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -23,23 +23,23 @@ import com.google.common.base.Splitter;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.UnaryOperator;
-import java.util.stream.Stream;
-import org.sonar.api.notifications.NotificationChannel;
+import java.util.stream.Collectors;
 import org.sonar.api.server.ws.Request;
 import org.sonar.api.server.ws.Response;
 import org.sonar.api.server.ws.WebService;
 import org.sonar.api.web.UserRole;
-import org.sonar.core.util.stream.MoreCollectors;
 import org.sonar.db.DbClient;
 import org.sonar.db.DbSession;
-import org.sonar.db.component.ComponentDto;
+import org.sonar.db.entity.EntityDto;
 import org.sonar.db.property.PropertyDto;
 import org.sonar.db.property.PropertyQuery;
 import org.sonar.db.user.UserDto;
+import org.sonar.server.notification.NotificationChannel;
 import org.sonar.server.user.UserSession;
 import org.sonarqube.ws.Notifications.ListResponse;
 import org.sonarqube.ws.Notifications.Notification;
@@ -49,7 +49,6 @@ import static java.util.Comparator.comparing;
 import static java.util.Comparator.naturalOrder;
 import static java.util.Comparator.nullsFirst;
 import static java.util.Optional.ofNullable;
-import static org.sonar.core.util.stream.MoreCollectors.toOneElement;
 import static org.sonar.server.exceptions.NotFoundException.checkFound;
 import static org.sonar.server.notification.ws.NotificationsWsParameters.ACTION_LIST;
 import static org.sonar.server.notification.ws.NotificationsWsParameters.PARAM_LOGIN;
@@ -67,7 +66,7 @@ public class ListAction implements NotificationsWsAction {
   public ListAction(NotificationCenter notificationCenter, DbClient dbClient, UserSession userSession, Dispatchers dispatchers) {
     this.dbClient = dbClient;
     this.userSession = userSession;
-    this.channels = notificationCenter.getChannels().stream().map(NotificationChannel::getKey).sorted().collect(MoreCollectors.toList());
+    this.channels = notificationCenter.getChannels().stream().map(NotificationChannel::getKey).sorted().toList();
     this.dispatchers = dispatchers;
   }
 
@@ -101,14 +100,14 @@ public class ListAction implements NotificationsWsAction {
       checkPermissions(request);
       UserDto user = getUser(dbSession, request);
 
-      return Stream
+      return Optional
         .of(ListResponse.newBuilder())
         .map(r -> r.addAllChannels(channels))
         .map(r -> r.addAllGlobalTypes(dispatchers.getGlobalDispatchers()))
         .map(r -> r.addAllPerProjectTypes(dispatchers.getProjectDispatchers()))
         .map(addNotifications(dbSession, user))
         .map(ListResponse.Builder::build)
-        .collect(toOneElement());
+        .orElseThrow();
     }
   }
 
@@ -119,11 +118,12 @@ public class ListAction implements NotificationsWsAction {
 
   private UnaryOperator<ListResponse.Builder> addNotifications(DbSession dbSession, UserDto user) {
     return response -> {
-      List<PropertyDto> properties = dbClient.propertiesDao().selectByQuery(PropertyQuery.builder().setUserUuid(user.getUuid()).build(), dbSession);
-      Map<String, ComponentDto> componentsByUuid = searchProjects(dbSession, properties);
+      List<PropertyDto> properties = dbClient.propertiesDao().selectByQuery(PropertyQuery.builder().setUserUuid(user.getUuid()).build(),
+        dbSession);
+      Map<String, EntityDto> entitiesByUuid = searchProjects(dbSession, properties);
 
       Predicate<PropertyDto> isNotification = prop -> prop.getKey().startsWith("notification.");
-      Predicate<PropertyDto> isComponentInDb = prop -> prop.getComponentUuid() == null || componentsByUuid.containsKey(prop.getComponentUuid());
+      Predicate<PropertyDto> isComponentInDb = prop -> prop.getEntityUuid() == null || entitiesByUuid.containsKey(prop.getEntityUuid());
 
       Notification.Builder notification = Notification.newBuilder();
 
@@ -131,7 +131,7 @@ public class ListAction implements NotificationsWsAction {
         .filter(isNotification)
         .filter(channelAndDispatcherAuthorized())
         .filter(isComponentInDb)
-        .map(toWsNotification(notification, componentsByUuid))
+        .map(toWsNotification(notification, entitiesByUuid))
         .sorted(comparing(Notification::getProject, nullsFirst(naturalOrder()))
           .thenComparing(Notification::getChannel)
           .thenComparing(Notification::getType))
@@ -151,39 +151,40 @@ public class ListAction implements NotificationsWsAction {
   }
 
   private boolean isDispatcherAuthorized(PropertyDto prop, String dispatcher) {
-    return (prop.getComponentUuid() != null && dispatchers.getProjectDispatchers().contains(dispatcher)) || dispatchers.getGlobalDispatchers().contains(dispatcher);
+    return (prop.getEntityUuid() != null && dispatchers.getProjectDispatchers().contains(dispatcher)) || dispatchers.getGlobalDispatchers().contains(dispatcher);
   }
 
-  private Map<String, ComponentDto> searchProjects(DbSession dbSession, List<PropertyDto> properties) {
-    Set<String> componentUuids = properties.stream()
-      .map(PropertyDto::getComponentUuid)
+  private Map<String, EntityDto> searchProjects(DbSession dbSession, List<PropertyDto> properties) {
+    Set<String> entityUuids = properties.stream()
+      .map(PropertyDto::getEntityUuid)
       .filter(Objects::nonNull)
-      .collect(MoreCollectors.toSet(properties.size()));
-    Set<String> authorizedProjectUuids = dbClient.authorizationDao().keepAuthorizedProjectUuids(dbSession, componentUuids, userSession.getUuid(), UserRole.USER);
-    return dbClient.componentDao().selectByUuids(dbSession, componentUuids)
+      .collect(Collectors.toSet());
+    Set<String> authorizedProjectUuids = dbClient.authorizationDao().keepAuthorizedEntityUuids(dbSession, entityUuids,
+      userSession.getUuid(), UserRole.USER);
+    return dbClient.entityDao().selectByUuids(dbSession, entityUuids)
       .stream()
-      .filter(c -> authorizedProjectUuids.contains(c.uuid()))
-      .collect(MoreCollectors.uniqueIndex(ComponentDto::uuid));
+      .filter(c -> authorizedProjectUuids.contains(c.getUuid()))
+      .collect(Collectors.toMap(EntityDto::getUuid, Function.identity()));
   }
 
-  private static Function<PropertyDto, Notification> toWsNotification(Notification.Builder notification, Map<String, ComponentDto> projectsByUuid) {
+  private static Function<PropertyDto, Notification> toWsNotification(Notification.Builder notification,
+    Map<String, EntityDto> projectsByUuid) {
     return property -> {
       notification.clear();
       List<String> propertyKey = Splitter.on(".").splitToList(property.getKey());
       notification.setType(propertyKey.get(1));
       notification.setChannel(propertyKey.get(2));
-      ofNullable(property.getComponentUuid()).ifPresent(componentUuid -> populateProjectFields(notification, componentUuid, projectsByUuid));
+      ofNullable(property.getEntityUuid()).ifPresent(componentUuid -> populateProjectFields(notification, componentUuid, projectsByUuid));
 
       return notification.build();
     };
   }
 
-  private static void populateProjectFields(Builder notification, String componentUuid,
-    Map<String, ComponentDto> projectsByUuid) {
-    ComponentDto project = projectsByUuid.get(componentUuid);
+  private static void populateProjectFields(Builder notification, String componentUuid, Map<String, EntityDto> projectsByUuid) {
+    EntityDto project = projectsByUuid.get(componentUuid);
     notification
       .setProject(project.getKey())
-      .setProjectName(project.name());
+      .setProjectName(project.getName());
   }
 
   private void checkPermissions(Request request) {
