@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -65,7 +65,7 @@ public class PullActionIssuesRetrieverTest {
     List<IssueDto> returnedDtos = new ArrayList<>();
     Consumer<List<IssueDto>> listConsumer = returnedDtos::addAll;
 
-    pullActionIssuesRetriever.processIssuesByBatch(dbClient.openSession(true), Set.of(), listConsumer);
+    pullActionIssuesRetriever.processIssuesByBatch(dbClient.openSession(true), Set.of(), listConsumer, issueDto -> true);
 
     assertThat(returnedDtos).isEmpty();
   }
@@ -73,7 +73,7 @@ public class PullActionIssuesRetrieverTest {
   @Test
   public void processIssuesByBatch_givenThousandOneIssuesReturnedByDatabase_thousandOneIssuesConsumed() {
     var pullActionIssuesRetriever = new PullActionIssuesRetriever(dbClient, queryParams);
-    List<IssueDto> thousandIssues = IntStream.rangeClosed(1, 1000).mapToObj(i -> new IssueDto().setKee(Integer.toString(i))).collect(Collectors.toList());
+    List<IssueDto> thousandIssues = IntStream.rangeClosed(1, 1000).mapToObj(i -> new IssueDto().setKee(Integer.toString(i))).toList();
     IssueDto singleIssue = new IssueDto().setKee("kee");
     when(issueDao.selectByBranch(any(), any(), any()))
       .thenReturn(thousandIssues)
@@ -83,7 +83,7 @@ public class PullActionIssuesRetrieverTest {
 
     Set<String> thousandIssueUuidsSnapshot = thousandIssues.stream().map(IssueDto::getKee).collect(Collectors.toSet());
     thousandIssueUuidsSnapshot.add(singleIssue.getKee());
-    pullActionIssuesRetriever.processIssuesByBatch(dbClient.openSession(true), thousandIssueUuidsSnapshot, listConsumer);
+    pullActionIssuesRetriever.processIssuesByBatch(dbClient.openSession(true), thousandIssueUuidsSnapshot, listConsumer, issueDto -> true);
 
     ArgumentCaptor<Set<String>> uuidsCaptor = ArgumentCaptor.forClass(Set.class);
     verify(issueDao, times(2)).selectByBranch(any(), uuidsCaptor.capture(), any());
@@ -98,14 +98,14 @@ public class PullActionIssuesRetrieverTest {
   public void processIssuesByBatch_correctly_processes_all_issues_regardless_of_creation_timestamp() {
     var pullActionIssuesRetriever = new PullActionIssuesRetriever(dbClient, queryParams);
     List<IssueDto> issuesWithSameCreationTimestamp = IntStream.rangeClosed(1, 100).mapToObj(i -> new IssueDto()
-      .setKee(Integer.toString(i)).setCreatedAt(100L)).collect(Collectors.toList());
+      .setKee(Integer.toString(i)).setCreatedAt(100L)).toList();
     when(issueDao.selectByBranch(any(), any(), any()))
       .thenReturn(issuesWithSameCreationTimestamp);
     List<IssueDto> returnedDtos = new ArrayList<>();
     Consumer<List<IssueDto>> listConsumer = returnedDtos::addAll;
 
     Set<String> issueKeysSnapshot = issuesWithSameCreationTimestamp.stream().map(IssueDto::getKee).collect(Collectors.toSet());
-    pullActionIssuesRetriever.processIssuesByBatch(dbClient.openSession(true), issueKeysSnapshot, listConsumer);
+    pullActionIssuesRetriever.processIssuesByBatch(dbClient.openSession(true), issueKeysSnapshot, listConsumer, issueDto -> true);
 
     assertThat(returnedDtos).hasSize(100);
   }
