@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2023 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -20,7 +20,6 @@
 package org.sonar.scanner.sensor;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 import org.sonar.api.batch.sensor.Sensor;
 import org.sonar.core.platform.ExtensionContainer;
 import org.sonar.scanner.bootstrap.AbstractExtensionDictionary;
@@ -48,6 +47,6 @@ public class ModuleSensorExtensionDictionary extends AbstractExtensionDictionary
     return result.stream()
       .map(s -> new ModuleSensorWrapper(s, sensorContext, sensorOptimizer, fileSystem, branchConfiguration))
       .filter(s -> global == s.isGlobal() && s.shouldExecute())
-      .collect(Collectors.toList());
+      .toList();
   }
 }
